--- a/src/components/pages/Play/Screen/Screen.module.scss
+++ b/src/components/pages/Play/Screen/Screen.module.scss
@@ -1,337 +1,334 @@
 .container {
-    width: 100%;
-    height: 100vh;
-    background: var(--background-important);
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  width: 100%;
+  height: 100vh;
+  background: var(--background-important);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .header {
-    width: 25%;
-    height: 100vh;
-    border-right: 2px solid var(--border-color);
-    overflow: scroll;
+  width: 25%;
+  height: 100vh;
+  border-right: 2px solid var(--border-color);
+  overflow: scroll;
 }
 
 .play_area {
-    width: 85%;
-    height: 100vh;
-    position: relative;
-    background: var(--background-less-important);
+  width: 85%;
+  height: 100vh;
+  position: relative;
+  background: var(--background-less-important);
 }
 
 .question {
-    width: 95%;
-    height: 65%;
-    display: flex;
-    font-size: 3em;
-    justify-content: center;
-    align-items: center;
-    font-weight: 900;
-    padding: 0% 14%;
-    position: relative;
-    text-align: center;
-    color: var(--text-color);
+  width: 95%;
+  height: 65%;
+  display: flex;
+  font-size: 3em;
+  justify-content: center;
+  align-items: center;
+  font-weight: 900;
+  padding: 0% 14%;
+  position: relative;
+  text-align: center;
+  color: var(--text-color);
 }
 
-
-
 .anwsers {
-    border-top: 2px solid var(--border-color);
-    width: 100%;
-    height: 35%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    padding: 1.5em 1em 0em 1em;
+  border-top: 2px solid var(--border-color);
+  width: 100%;
+  height: 35%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  padding: 1.5em 1em 0em 1em;
 }
 
 .anwser {
-    width: 47.5%;
-    height: 40%;
-    color: var(--text-color);
-    font-weight: 700;
-    font-size: 1.5em;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: all ease-in-out 0.4s;
-    border-radius: 2222px;
-    color: var(--text-color);
-    background: var(--hover-color);
-    border: 2px solid var(--border-color);
-    cursor: pointer;
+  width: 47.5%;
+  height: 40%;
+  color: var(--text-color);
+  font-weight: 700;
+  font-size: 1.5em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all ease-in-out 0.4s;
+  border-radius: 2222px;
+  color: var(--text-color);
+  background: var(--hover-color);
+  border: 2px solid var(--border-color);
+  cursor: pointer;
 
-    &:hover {
-        background: var(--hover-color);
-        border: 2px solid (--icon-border);
-    }
+  &:hover {
+    background: var(--hover-color);
+    border: 2px solid (--icon-border);
+  }
 }
 
 .bar {
-    position: absolute;
-    top: 0%;
-    width: 100%;
-    height: 2em;
-    border-bottom: 2px solid var(--border-color);
+  position: absolute;
+  top: 0%;
+  width: 100%;
+  height: 2em;
+  border-bottom: 2px solid var(--border-color);
 }
 
 .bar_value {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    color: var(--text-color);
-    align-items: center;
-    justify-content: center;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  color: var(--text-color);
+  align-items: center;
+  justify-content: center;
 }
 
 .modal {
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    font-weight: 900;
-    font-size: 2.75em;
-    color: var(--text-color);
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  font-weight: 900;
+  font-size: 2.75em;
+  color: var(--text-color);
 }
 
 .button {
-    margin-top: 1.5em;
-    font-size: .5em;
-    padding: 0.75em 1.25em;
-    border: 2px solid var(--border-color);
-    transition: all ease-in-out 0.3s;
-    background: var(--button-bg);
-    font-weight: 500em;
-    color: var(--button-text);
-    border-radius: 1000px;
-    display: flex;
-    align-items: center;
-    flex-direction: row;
+  text-align: center;
+  margin-top: 1.5em;
+  font-size: 0.5em;
+  padding: 0.75em 1.25em;
+  border: 2px solid var(--border-color);
+  transition: all ease-in-out 0.3s;
+  background: #fedf60;
+  font-weight: 500em;
+  color: var(--button-btn);
+  border-radius: 1000px;
+  //display: flex;
+  align-items: center;
+  flex-direction: row;
 }
 
 .button:hover {
-    background: var(--hover-color)
+  background: var(--hover-color);
 }
 
 .stats_title {
-    height: 2em;
-    color: var(--text-color);
-    display: flex;
-    font-weight: 600;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    vertical-align: center;
-    text-align: center;
-    border-bottom: 2px solid var(--border-color);
+  height: 2em;
+  color: var(--text-color);
+  display: flex;
+  font-weight: 600;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  vertical-align: center;
+  text-align: center;
+  border-bottom: 2px solid var(--border-color);
 }
 
 .general_stats {
-    height: 40vh;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    margin-top: 0.75em;
+  height: 40vh;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  margin-top: 0.75em;
 }
 
 .general_corrector {
-    height: 40vh;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    margin-top: 0.75em;
+  height: 40vh;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  margin-top: 0.75em;
 }
 
 .stats_boxes {
-    position: relative;
-    width: 45.75%;
-    height: 42%;
-    display: flex;
-    justify-content: center;
-    border-radius: 1.4em;
-    align-items: center;
-    flex-direction: column;
-    margin-bottom: 0.75em;
-    cursor: pointer;
-    transition: 0.4s ease-in-out all;
-    border: 2px solid var(--border-color);
-    background: var(--hover-color);
+  position: relative;
+  width: 45.75%;
+  height: 42%;
+  display: flex;
+  justify-content: center;
+  border-radius: 1.4em;
+  align-items: center;
+  flex-direction: column;
+  margin-bottom: 0.75em;
+  cursor: pointer;
+  transition: 0.4s ease-in-out all;
+  border: 2px solid var(--border-color);
+  background: var(--hover-color);
 }
 
 .questions_boxes {
-    position: relative;
-    width: 91.5%;
-    display: flex;
-    justify-content: center;
-    border-radius: 1.4em;
-    padding: 1em;
-    flex-direction: column;
-    border: 2px solid var(--border-color);
-    background: var(--hover-color);
-    margin-bottom: 0.75em;
+  position: relative;
+  width: 91.5%;
+  display: flex;
+  justify-content: center;
+  border-radius: 1.4em;
+  padding: 1em;
+  flex-direction: column;
+  border: 2px solid var(--border-color);
+  background: var(--hover-color);
+  margin-bottom: 0.75em;
 
-    &:last-child {
-        margin-bottom: 1em;
-    }
+  &:last-child {
+    margin-bottom: 1em;
+  }
 }
 
 .question_box {
-    color: var(--text-color);
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: .34em;
+  color: var(--text-color);
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 0.34em;
 }
 
-.ttq{
-    display: flex;
-    align-items: center;
+.ttq {
+  display: flex;
+  align-items: center;
 }
 
 .stats_icon {
-    font-size: 2em;
-    color: var(--text-color);
+  font-size: 2em;
+  color: var(--text-color);
 }
 
 .question_which {
-    font-size: 1.25em;
-    color: var(--text-color);
+  font-size: 1.25em;
+  color: var(--text-color);
 }
 
 .stats_description {
-    font-size: 0.95em;
-    color: var(--text-color);
-    width: 90%;
-    text-align: center;
-    font-size: 0.95em;
+  font-size: 0.95em;
+  color: var(--text-color);
+  width: 90%;
+  text-align: center;
+  font-size: 0.95em;
 }
 
 .view_container {
-    width: 100%;
-    padding: 1.5em 1.25em 1.25em 1.25em;
+  width: 100%;
+  padding: 1.5em 1.25em 1.25em 1.25em;
 }
 
 .view_wrapper {
-    border-radius: 1.4em;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  border-radius: 1.4em;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .view_option {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0.65em 1em;
-    border-radius: 1.4em;
-    cursor: pointer;
-    border: 2px solid var(--border-color);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0.65em 1em;
+  border-radius: 1.4em;
+  cursor: pointer;
+  border: 2px solid var(--border-color);
 
-    &:first-child {
-        margin-right: 0.2em;
-    }
+  &:first-child {
+    margin-right: 0.2em;
+  }
 
-    &:last-child {
-        margin-left: 0.2em;
-    }
+  &:last-child {
+    margin-left: 0.2em;
+  }
 }
 
 .view_icon {
-    fill: var(--icon-border);
-    height: 1em;
-    margin-right: 0.65em;
+  fill: var(--icon-border);
+  height: 1em;
+  margin-right: 0.65em;
 }
 
 .view_item_text {
-    font-size: 1.1em;
-    color: var(--text-color);
-    position: relative;
+  font-size: 1.1em;
+  color: var(--text-color);
+  position: relative;
 }
 
 .question_current {
-    font-size: 1.2em;
-    color: var(--text-color);
-    margin-bottom: .5em;
+  font-size: 1.2em;
+  color: var(--text-color);
+  margin-bottom: 0.5em;
 }
 
 .mute {
-    border-radius: 100%;
-    margin-top: 1em;
-    padding: 0.5em;
-    width: 3em;
-    height: 3em;
-    transition: all ease-in-out 0.4s;
-    cursor: pointer;
-    fill: var(--icon-border);
-    border: 2px solid var(--border-color);
+  border-radius: 100%;
+  margin-top: 1em;
+  padding: 0.5em;
+  width: 3em;
+  height: 3em;
+  transition: all ease-in-out 0.4s;
+  cursor: pointer;
+  fill: var(--icon-border);
+  border: 2px solid var(--border-color);
 
-    &:hover {
-        background: var(--hover-color);
-    }
+  &:hover {
+    background: var(--hover-color);
+  }
 }
 
 .notification {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 28px;
-    height: 28px;
-    position: absolute;
-    right: -8px;
-    background: var(--button-bg);
-    color: var(--button-text);
-    border-radius: 100%;
-    top: -26px;
-    font-size: 0.9em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 28px;
+  height: 28px;
+  position: absolute;
+  right: -8px;
+  background: var(--button-bg);
+  color: var(--button-text);
+  border-radius: 100%;
+  top: -26px;
+  font-size: 0.9em;
 }
 
 .nothing {
-    width: 90%;
-    text-align: center;
-    color: var(--text-color);
-    font-size: 1.65em;
-    margin-top: -1em;
-    margin-right: 0.5em;
+  width: 90%;
+  text-align: center;
+  color: var(--text-color);
+  font-size: 1.65em;
+  margin-top: -1em;
+  margin-right: 0.5em;
 }
-
-
 
 .profile_wrapper {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
-.profile_name{
-    font-size: 1.25em;
+.profile_name {
+  font-size: 1.25em;
 }
 
-.profile_img{
-    width: 3.5em;
-    border-radius: 100%;
-    margin-right: 1em;
+.profile_img {
+  width: 3.5em;
+  border-radius: 100%;
+  margin-right: 1em;
 }
 
-.pointers{
-    font-size: .65em;
+.pointers {
+  font-size: 0.65em;
 }
 
-.coinsw{
-    display: flex;
-    align-items: center;
+.coinsw {
+  display: flex;
+  align-items: center;
 }
 
-.anwsers_all{
-    display: flex;
-    flex-wrap: wrap;
+.anwsers_all {
+  display: flex;
+  flex-wrap: wrap;
 }
 
-.anwsers_all_single{
-   width: 50%; 
+.anwsers_all_single {
+  width: 50%;
 }
